--- a/src/main/resources/seed/competencies.yaml
+++ b/src/main/resources/seed/competencies.yaml
@@ -19,6 +19,18 @@ categories:
           decent: "Gebruikt JOINs, subqueries, begrijpt indexes"
           good: "Optimaliseert complexe queries, ontwerpt schemas"
           excellent: "Stemt database performance af, ontwerpt schaalbare datamodellen"
+      - name: "Spring Framework"
+        levels:
+          basic: "Begrijpt basis Spring concepten, kan bestaande applicaties uitbreiden"
+          decent: "Bouw applicaties met Spring Boot, begrijpt dependency injection"
+          good: "Integreert verschillende Spring modules (Security, Data, MVC)"
+          excellent: "Architecteert complexe Spring systemen, optimaliseert performance"
+      - name: "Git"
+        levels:
+          basic: "Kan basis Git commando's uitvoeren (add, commit, push)"
+          decent: "Beheert branches, merge conflicts, begrijpt Git workflows"
+          good: "Levert code reviews, gebruikt geavanceerde Git features"
+          excellent: "Definieert Git strategies, traint teams in best practices"
 
   - name: "Software Design"
     skills:
@@ -40,6 +52,24 @@ categories:
           decent: "Ontwerpt consistente, gedocumenteerde API's"
           good: "Bouw schaalbare API's met versiebeheer en foutafhandeling"
           excellent: "Definieert API standaarden, ontwerpt complexe integraties"
+      - name: "Object-Oriented Programming"
+        levels:
+          basic: "Begrijpt basis OOP concepten (classes, objects, inheritance)"
+          decent: "Past encapsulation, inheritance en polymorphism toe"
+          good: "Ontwerpt complexe object modellen, begrijpt SOLID principes"
+          excellent: "Creëert elegant OOP architecturen, mentort anderen in OOP"
+      - name: "Microservices Architectuur"
+        levels:
+          basic: "Begrijpt microservices concepten en voordelen"
+          decent: "Implementeert eenvoudige microservices met communicatie"
+          good: "Ontwerpt service boundaries, implementeert service discovery"
+          excellent: "Architecteert microservices platformen, implementeert observability"
+      - name: "Test-Driven Development"
+        levels:
+          basic: "Begrijpt TDD cyclus: Red-Green-Refactor"
+          decent: "Schrijft tests eerst voor eenvoudige functionaliteit"
+          good: "Past TDD toe in complexe features, bereikt hoge test coverage"
+          excellent: "Leidt TDD implementatie in teams, definieert testing strategieën"
 
   - name: "DevOps & Infrastructure"
     skills:
@@ -61,6 +91,12 @@ categories:
           decent: "Deployt applicaties, beheert cloud resources"
           good: "Ontwerpt cloud-native architecturen, implementeert IaC"
           excellent: "Optimaliseert kosten, architecteert multi-regio oplossingen"
+      - name: "Docker"
+        levels:
+          basic: "Kan bestaande Docker images runnen, begrijpt containers"
+          decent: "Creëert Dockerfiles, gebruikt Docker Compose"
+          good: "Optimaliseert images, implementeert multi-stage builds"
+          excellent: "Architecteert container strategieën, definieert container standaarden"
 
   - name: "Quality & Testing"
     skills:
@@ -76,6 +112,18 @@ categories:
           decent: "Schrijft integratie tests met test databases"
           good: "Test complexe integraties, gebruikt contract testing"
           excellent: "Ontwerpt integratie test frameworks"
+      - name: "End-to-end Testing"
+        levels:
+          basic: "Begrijpt E2E testing concepten en gebruiksscenario's"
+          decent: "Schrijft E2E tests met tooling zoals Selenium"
+          good: "Ontwerpt robuuste E2E test suites, implementeert parallelle testing"
+          excellent: "Architecteert E2E testing strategieën, integreert met CI/CD"
+      - name: "Automated Testing"
+        levels:
+          basic: "Begrijpt automated testing voordelen en types"
+          decent: "Schrijft automated tests voor verschillende lagen"
+          good: "Ontwerpt test automation frameworks, implementeert test data management"
+          excellent: "Architecteert complete test automation strategieën"
       - name: "Code Review"
         levels:
           basic: "Neemt deel aan code reviews"
@@ -115,6 +163,18 @@ categories:
           decent: "Onderhoudt duidelijke communicatie met stakeholders"
           good: "Stemt stakeholders af op prioriteiten en trade-offs"
           excellent: "Bouw langetermijn vertrouwen op in de organisatie"
+      - name: "Project Management"
+        levels:
+          basic: "Begrijpt project lifecycle en planning basics"
+          decent: "Beheert eigen taken en deadlines effectief"
+          good: "Coördineert kleine projecten, beheert resources"
+          excellent: "Leidt complexe projecten, definieert project strategieën"
+      - name: "Technical Leadership"
+        levels:
+          basic: "Neemt technische ownership van eigen werk"
+          decent: "Leidt technische discussies binnen team"
+          good: "Begeleidt technische beslissingen, mentort junior developers"
+          excellent: "Definieert technische visie, beïnvloedt technische richting organisatie"
       - name: "Motiveren"
         levels:
           basic: "Toont enthousiasme en energie in eigen werk"
@@ -153,6 +213,9 @@ roles:
       - skill: "SQL"
         category: "Programming"
         level: "basic"
+      - skill: "Git"
+        category: "Programming"
+        level: "basic"
       - skill: "Unit Testing"
         category: "Quality & Testing"
         level: "basic"
@@ -169,6 +232,12 @@ roles:
       - skill: "Java"
         category: "Programming"
         level: "decent"
+      - skill: "Spring Framework"
+        category: "Programming"
+        level: "basic"
+      - skill: "Git"
+        category: "Programming"
+        level: "decent"
       - skill: "Python"
         category: "Programming"
         level: "basic"
@@ -180,30 +249,20 @@ roles:
         level: "decent"
       - skill: "API Design"
         category: "Software Design"
-        level: "basic"
-      - skill: "CI/CD"
-        category: "DevOps & Infrastructure"
-        level: "basic"
-      - skill: "Unit Testing"
-        category: "Quality & Testing"
+        level: "good"
+      - skill: "Microservices Architectuur"
+        category: "Software Design"
         level: "decent"
-      - skill: "Integration Testing"
-        category: "Quality & Testing"
-        level: "basic"
-      - skill: "Code Review"
-        category: "Quality & Testing"
-        level: "basic"
-      - skill: "Communication"
-        category: "Soft Skills"
+      - skill: "Object-Oriented Programming"
+        category: "Software Design"
+        level: "excellent"
+      - skill: "Test-Driven Development"
+        category: "Software Design"
+        level: "good"
+      - skill: "Spring Framework"
+        category: "Programming"
         level: "decent"
-      - skill: "Problem Solving"
-        category: "Soft Skills"
-        level: "decent"
-
-  - name: "Senior Developer"
-    description: "Technische leider die team beslissingen begeleidt en mentort"
-    requirements:
-      - skill: "Java"
+      - skill: "Git"
         category: "Programming"
         level: "good"
       - skill: "Python"
@@ -221,7 +280,95 @@ roles:
       - skill: "API Design"
         category: "Software Design"
         level: "good"
+      - skill: "Microservices Architectuur"
+        category: "Software Design"
+        level: "basic"
+      - skill: "Test-Driven Development"
+        category: "Software Design"
+        level: "good"
       - skill: "CI/CD"
+        category: "DevOps & Infrastructure"
+        level: "decent"
+      - skill: "Docker"
+        category: "DevOps & Infrastructure"
+        level: "decent"
+      - skill: "Object-Oriented Programming"
+        category: "Software Design"
+        level: "good"
+      - skill: "CI/CD"
+        category: "DevOps & Infrastructure"
+        level: "decent"
+      - skill: "Docker"
+        category: "DevOps & Infrastructure"
+        level: "basic"
+      - skill: "Kubernetes"
+        category: "DevOps & Infrastructure"
+        level: "basic"
+      - skill: "Cloud Platforms"
+        category: "DevOps & Infrastructure"
+        level: "basic"
+      - skill: "Unit Testing"
+        category: "Quality & Testing"
+        level: "good"
+      - skill: "Integration Testing"
+        category: "Quality & Testing"
+        level: "good"
+      - skill: "End-to-end Testing"
+        category: "Quality & Testing"
+        level: "decent"
+      - skill: "Automated Testing"
+        category: "Quality & Testing"
+        level: "good"
+      - skill: "Communication"
+        category: "Soft Skills"
+        level: "good"
+      - skill: "Mentoring"
+        category: "Soft Skills"
+        level: "decent"
+      - skill: "Problem Solving"
+        category: "Soft Skills"
+        level: "good"
+
+  - name: "Senior Developer"
+    description: "Technische leider die team beslissingen begeleidt en mentort"
+    requirements:
+      - skill: "Java"
+        category: "Programming"
+        level: "good"
+      - skill: "Spring Framework"
+        category: "Programming"
+        level: "decent"
+      - skill: "Git"
+        category: "Programming"
+        level: "good"
+      - skill: "Python"
+        category: "Programming"
+        level: "decent"
+      - skill: "SQL"
+        category: "Programming"
+        level: "good"
+      - skill: "Design Patterns"
+        category: "Software Design"
+        level: "good"
+      - skill: "Architecture"
+        category: "Software Design"
+        level: "decent"
+      - skill: "API Design"
+        category: "Software Design"
+        level: "good"
+      - skill: "Microservices Architectuur"
+        category: "Software Design"
+        level: "basic"
+      - skill: "Object-Oriented Programming"
+        category: "Software Design"
+        level: "good"
+      - skill: "Test-Driven Development"
+        category: "Software Design"
+        level: "decent"
+      - skill: "CI/CD"
+        category: "DevOps & Infrastructure"
+        level: "decent"
+      - skill: "Docker"
         category: "DevOps & Infrastructure"
         level: "decent"
       - skill: "Kubernetes"
@@ -236,6 +383,12 @@ roles:
       - skill: "Integration Testing"
         category: "Quality & Testing"
         level: "decent"
+      - skill: "End-to-end Testing"
+        category: "Quality & Testing"
+        level: "decent"
+      - skill: "Automated Testing"
+        category: "Quality & Testing"
+        level: "basic"
       - skill: "Code Review"
         category: "Quality & Testing"
         level: "good"
@@ -289,6 +442,12 @@ roles:
       - skill: "Java"
         category: "Programming"
         level: "excellent"
+      - skill: "Spring Framework"
+        category: "Programming"
+        level: "good"
+      - skill: "Git"
+        category: "Programming"
+        level: "excellent"
       - skill: "Python"
         category: "Programming"
         level: "decent"
@@ -334,6 +493,12 @@ roles:
       - skill: "Motiveren"
         category: "Soft Skills"
         level: "decent"
+      - skill: "Technical Leadership"
+        category: "Soft Skills"
+        level: "good"
+      - skill: "Project Management"
+        category: "Soft Skills"
+        level: "basic"
 
   - name: "Lead Developer / Software Architect"
     description: "Hybride rol die hands-on team leadership combineert met architectonisch design, overbrugt technische implementatie en organisatorische strategie"
