Matrix first set of fixes

--- a/src/main/resources/seed/competencies.yaml
+++ b/src/main/resources/seed/competencies.yaml
@@ -560,6 +560,9 @@ roles:
       - skill: "iSAQB"
         category: "Architecture Frameworks"
         level: "decent"
+      - skill: "ArchiMate"
+        category: "Architecture Frameworks"
+        level: "basic"
 
   - name: "Software Architect"
     roleFamily: "Architect"
@@ -602,15 +605,15 @@ roles:
       - skill: "Stakeholder Management"
         category: "Soft Skills"
         level: "excellent"
-      - skill: "TOGAF"
-        category: "Architecture Frameworks"
-        level: "good"
       - skill: "ArchiMate"
         category: "Architecture Frameworks"
-        level: "good"
+        level: "decent"
       - skill: "iSAQB"
         category: "Architecture Frameworks"
         level: "excellent"
+      - skill: "TOGAF"
+        category: "Architecture Frameworks"
+        level: "basic"
 
   - name: "Solution Architect"
     roleFamily: "Architect"
@@ -646,10 +649,10 @@ roles:
         level: "excellent"
       - skill: "TOGAF"
         category: "Architecture Frameworks"
-        level: "excellent"
+        level: "decent"
       - skill: "ArchiMate"
         category: "Architecture Frameworks"
-        level: "excellent"
+        level: "good"
       - skill: "iSAQB"
         category: "Architecture Frameworks"
         level: "decent"
