Removed duplicates using opencode + minimax

--- a/src/main/resources/seed/competencies.yaml
+++ b/src/main/resources/seed/competencies.yaml
@@ -4,7 +4,7 @@ categories:
       - name: "Java"
         levels:
           basic: "Kan basis Java code schrijven, begrijpt syntax en eenvoudige datastructuren"
-          decent: "Schrijft schone code, begrijpt OOP principes, gebruikt collections effectief"
+          decent: "Schrijft schone code, begrijpt OOP en functionele principes, gebruikt collections effectief"
           good: "Ontwikkelt onderhoudbare systemen, is bedreven met streams en generics"
           excellent: "Beheerst geavanceerde patronen, draagt bij aan architectonische beslissingen"
       - name: "Python"
@@ -94,8 +94,8 @@ categories:
       - name: "Docker"
         levels:
           basic: "Kan bestaande Docker images runnen, begrijpt containers"
-          decent: "Creëert Dockerfiles, gebruikt Docker Compose"
-          good: "Optimaliseert images, implementeert multi-stage builds"
+          decent: "Creëert Dockerfiles, gebruikt Docker Compose, weet dat er verschillende docker implementaties zijn"
+          good: "Optimaliseert images, implementeert multi-stage builds, kan omgaan met verschillende container repositories"
           excellent: "Architecteert container strategieën, definieert container standaarden"
 
   - name: "Quality & Testing"
@@ -121,15 +121,15 @@ categories:
       - name: "Automated Testing"
         levels:
           basic: "Begrijpt automated testing voordelen en types"
-          decent: "Schrijft automated tests voor verschillende lagen"
-          good: "Ontwerpt test automation frameworks, implementeert test data management"
+          decent: "Schrijft automated junit en integratie tests met de gekozen frameworks"
+          good: "Gebruikt test automation frameworks, implementeert test data management, zorgt voor voldoende coverage met een bewuste keuze tussen junit tests, integratie tests en keten tests"
           excellent: "Architecteert complete test automation strategieën"
       - name: "Code Review"
         levels:
           basic: "Neemt deel aan code reviews"
           decent: "Geeft constructieve feedback"
-          good: "Beoordeelt architectonische beslissingen, mentort junioren"
-          excellent: "Definieert review standaarden, coacht reviewers"
+          good: "Geeft constructieve feedback op de huidige code, het onderliggende ontwerp, en deelt op welke punten een andere beslissing genomen had kunnen worden en welke impact dat zou hebben op de nonfunctionals."
+          excellent: "Beoordeelt architectonische beslissingen, mentort junioren"
 
   - name: "Soft Skills"
     skills:
@@ -211,7 +211,7 @@ roles:
     requirements:
       - skill: "Java"
         category: "Programming"
-        level: "basic"
+        level: "decent"
       - skill: "SQL"
         category: "Programming"
         level: "basic"
@@ -235,10 +235,10 @@ roles:
     requirements:
       - skill: "Java"
         category: "Programming"
-        level: "decent"
+        level: "good"
       - skill: "Spring Framework"
         category: "Programming"
-        level: "basic"
+        level: "decent"
       - skill: "Git"
         category: "Programming"
         level: "decent"
@@ -253,52 +253,22 @@ roles:
         level: "decent"
       - skill: "API Design"
         category: "Software Design"
-        level: "good"
+        level: "decent"
       - skill: "Microservices Architectuur"
         category: "Software Design"
         level: "decent"
       - skill: "Object-Oriented Programming"
         category: "Software Design"
-        level: "excellent"
+        level: "decent"
       - skill: "Test-Driven Development"
-        category: "Software Design"
-        level: "good"
-      - skill: "Spring Framework"
-        category: "Programming"
-        level: "decent"
-      - skill: "Git"
-        category: "Programming"
-        level: "good"
-      - skill: "Python"
-        category: "Programming"
-        level: "decent"
-      - skill: "SQL"
-        category: "Programming"
-        level: "good"
-      - skill: "Design Patterns"
         category: "Software Design"
         level: "good"
       - skill: "Architecture"
         category: "Software Design"
         level: "decent"
-      - skill: "API Design"
-        category: "Software Design"
-        level: "good"
       - skill: "Microservices Architectuur"
         category: "Software Design"
         level: "basic"
-      - skill: "Test-Driven Development"
-        category: "Software Design"
-        level: "good"
-      - skill: "CI/CD"
-        category: "DevOps & Infrastructure"
-        level: "decent"
-      - skill: "Docker"
-        category: "DevOps & Infrastructure"
-        level: "decent"
-      - skill: "Object-Oriented Programming"
-        category: "Software Design"
-        level: "good"
       - skill: "CI/CD"
         category: "DevOps & Infrastructure"
         level: "decent"
