--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ quarkus.application.name=competency-matrix
 
 # Database (H2 in-memory)
 quarkus.datasource.db-kind=h2
-quarkus.datasource.jdbc.url=jdbc:h2:mem:competencymatrix;MODE=PostgreSQL;DB_CLOSE_DELAY=-1
+quarkus.datasource.jdbc.url=jdbc:h2:mem:competencymatrix;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=FALSE
 quarkus.datasource.username=sa
 quarkus.datasource.password=
 
