--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,8 @@ competency.sync.mode=replace
 
 # HTTP
 quarkus.http.port=8080
+# required for clever cloud (and kubernetes)
+quarkus.http.host=0.0.0.0
 
 # Management (Actuator equivalent)
 quarkus.management.enabled=true
