--- a/src/main/resources/seed/competencies.yaml
+++ b/src/main/resources/seed/competencies.yaml
@@ -19,12 +19,18 @@ categories:
           decent: "Gebruikt JOINs, subqueries, begrijpt indexes"
           good: "Optimaliseert complexe queries, ontwerpt schemas"
           excellent: "Stemt database performance af, ontwerpt schaalbare datamodellen"
-      - name: "Spring Framework"
+      - name: "Spring (alt. Quarkus)"
         levels:
           basic: "Begrijpt basis Spring concepten, kan bestaande applicaties uitbreiden"
           decent: "Bouw applicaties met Spring Boot, begrijpt dependency injection"
           good: "Integreert verschillende Spring modules (Security, Data, MVC)"
           excellent: "Architecteert complexe Spring systemen, optimaliseert performance"
+      - name: "Quarkus (alt. Spring)"
+        levels:
+          basic: "Begrijpt basis Quarkus concepten, kan bestaande applicaties uitbreiden"
+          decent: "Bouw applicaties met Quarkus, begrijpt dependency injection en reactive programming"
+          good: "Integreert verschillende Quarkus features (Security, Data, RESTEasy), optimaliseert voor serverless"
+          excellent: "Architecteert complexe Quarkus systemen, implementeert geavanceerde patterns"
       - name: "Git"
         levels:
           basic: "Kan basis Git commando's uitvoeren (add, commit, push)"
@@ -236,7 +242,10 @@ roles:
       - skill: "Java"
         category: "Programming"
         level: "good"
-      - skill: "Spring Framework"
+      - skill: "Spring (alt. Quarkus)"
+        category: "Programming"
+        level: "decent"
+      - skill: "Quarkus (alt. Spring)"
         category: "Programming"
         level: "decent"
       - skill: "Git"
@@ -308,7 +317,10 @@ roles:
       - skill: "Java"
         category: "Programming"
         level: "good"
-      - skill: "Spring Framework"
+      - skill: "Spring (alt. Quarkus)"
+        category: "Programming"
+        level: "decent"
+      - skill: "Quarkus (alt. Spring)"
         category: "Programming"
         level: "decent"
       - skill: "Git"
@@ -419,7 +431,10 @@ roles:
       - skill: "Java"
         category: "Programming"
         level: "excellent"
-      - skill: "Spring Framework"
+      - skill: "Spring (alt. Quarkus)"
+        category: "Programming"
+        level: "good"
+      - skill: "Quarkus (alt. Spring)"
         category: "Programming"
         level: "good"
       - skill: "Git"
