--- a/src/main/resources/seed/roles/medior-developer.yaml
+++ b/src/main/resources/seed/roles/medior-developer.yaml
@@ -4,7 +4,8 @@ seniorityOrder: 2
 description: Ervaren developer die zelfstandig aan features werkt
 requirements:
   - { skill: Java, category: Programming, level: good }
-  - { skill: Spring Framework, category: Programming, level: decent }
+  - { skill: Spring (alt. Quarkus), category: Programming, level: decent }
+  - { skill: Quarkus (alt. Spring), category: Programming, level: decent }
   - { skill: Git, category: Programming, level: decent }
   - { skill: Python, category: Programming, level: basic }
   - { skill: SQL, category: Programming, level: decent }
