--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,8 @@ quarkus.http.host=0.0.0.0
 quarkus.management.enabled=true
 quarkus.management.port=9000
 
+competence.sync.allow.reload=false
+
 # Metrics
 quarkus.micrometer.export.prometheus.enabled=true
 
@@ -35,6 +37,10 @@ quarkus.log.category."io.quarkus.flyway".level=DEBUG
 
 # Dev mode
 %dev.quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
+# Test mode
+%dev.quarkus.flyway.clean-at-start=true
+%dev.competency.sync.mode=replace
+%dev.competence.sync.allow.reload=true
 
 # Test mode
 %test.quarkus.flyway.clean-at-start=true
