--- a/src/main/resources/seed/progressions.yaml
+++ b/src/main/resources/seed/progressions.yaml
@@ -2,6 +2,8 @@
 - { from: Medior Developer, to: Senior Developer }
 - { from: Senior Developer, to: Specialist Developer }
 - { from: Senior Developer, to: Lead Developer }
+- { from: Senior Developer, to: Scrum Master }
+- { from: Scrum Master, to: Lead Developer }
 - { from: Lead Developer, to: Lead Developer / Software Architect }
 - { from: Lead Developer / Software Architect, to: Software Architect }
 - { from: Software Architect, to: Solution Architect }
