--- a/src/main/resources/seed/roles/specialist-developer.yaml
+++ b/src/main/resources/seed/roles/specialist-developer.yaml
@@ -8,6 +8,7 @@ requirements:
   - { skill: Java, category: Programming, level: excellent }
   - { skill: SQL, category: Programming, level: good }
   - { skill: Git, category: Programming, level: excellent }
+  - { skill: Maven/Gradle, category: Programming, level: good }
   - { skill: Design Patterns, category: Software Design, level: excellent }
   - { skill: Architecture, category: Software Design, level: decent }
   - { skill: Unit Testing, category: Quality & Testing, level: excellent }
