--- a/src/main/resources/seed/categories/soft-skills.yaml
+++ b/src/main/resources/seed/categories/soft-skills.yaml
@@ -35,3 +35,24 @@ skills:
     levels: { basic: Toont enthousiasme en energie in eigen werk, decent: Inspireert
       teamgenoten door positieve houding,             good: Motiveert anderen door doelen en vooruitgang
                 te tonen, excellent: Creëert een cultuur van motivatie en eigenaarschap }
+  - name: Agile Methodologieën
+    levels: { basic: 'Begrijpt Scrum framework basics en ceremonies', decent: 'Faciliteert
+      Scrum events effectief (Daily, Planning, Review, Retrospective)', good: 'Optimaliseert
+      team Agile practices, begrijpt Kanban en hybride methodieken', excellent: 'Mentort
+      andere teams in Agile adoptie, implementeert SAFe en schaalt Agile across organisatie' }
+  - name: Facilitatie
+    levels: { basic: 'Voert basale team meetings', decent: 'Faciliteert productieve discussies
+      en besluitvorming', good: 'Handelt moeilijke gesprekken en conflicten af', excellent: 'Creëert
+      collaboratieve omgevingen en workshops over teams heen' }
+  - name: Servant Leadership
+    levels: { basic: 'Ondersteunt teamleden wanneer gevraagd', decent: 'Prioriteert team behoeften
+      boven persoonlijke agenda', good: 'Empowert team om beslissingen te maken', excellent: 'Bouw
+      zelforganiserende, high-performing teams' }
+  - name: Team Dynamiek
+    levels: { basic: 'Herken basis team interactie patronen', decent: 'Identificeert en adresseert
+      team conflicten', good: 'Optimaliseert team performance en samenwerking', excellent: 'Transformeert
+      team cultuur en engagement' }
+  - name: Retrospective Leadership
+    levels: { basic: 'Voert basale retrospectives', decent: 'Faciliteert actionable team verbeteringen',
+      good: 'Identificeert systemische issues en patronen', excellent: 'Drift continuous improvement
+      cultuur' }
