--- a/src/main/resources/seed/roles/junior-developer.yaml
+++ b/src/main/resources/seed/roles/junior-developer.yaml
@@ -6,6 +6,7 @@ requirements:
   - { skill: Java, category: Programming, level: decent }
   - { skill: SQL, category: Programming, level: basic }
   - { skill: Git, category: Programming, level: basic }
+  - { skill: Maven/Gradle, category: Programming, level: basic }
   - { skill: Unit Testing, category: Quality & Testing, level: basic }
   - { skill: Communication, category: Soft Skills, level: basic }
   - { skill: Problem Solving, category: Soft Skills, level: basic }
