--- a/src/main/resources/seed/roles/medior-developer.yaml
+++ b/src/main/resources/seed/roles/medior-developer.yaml
@@ -4,9 +4,9 @@ seniorityOrder: 2
 description: Ervaren developer die zelfstandig aan features werkt
 requirements:
   - { skill: Java, category: Programming, level: good }
-  - { skill: Spring (alt. Quarkus), category: Programming, level: decent }
-  - { skill: Quarkus (alt. Spring), category: Programming, level: decent }
+  - { skill: Spring/Quarkus/Microprofile, category: Programming, level: decent }
   - { skill: Git, category: Programming, level: decent }
+  - { skill: Maven/Gradle, category: Programming, level: decent }
   - { skill: Python, category: Programming, level: basic }
   - { skill: SQL, category: Programming, level: decent }
   - { skill: Design Patterns, category: Software Design, level: decent }
