--- a/src/main/resources/seed/roles/senior-developer.yaml
+++ b/src/main/resources/seed/roles/senior-developer.yaml
@@ -4,9 +4,9 @@ seniorityOrder: 3
 description: Technische leider die team beslissingen begeleidt en mentort
 requirements:
   - { skill: Java, category: Programming, level: good }
-  - { skill: Spring (alt. Quarkus), category: Programming, level: good }
-  - { skill: Quarkus (alt. Spring), category: Programming, level: good }
+  - { skill: Spring/Quarkus/Microprofile, category: Programming, level: good }
   - { skill: Git, category: Programming, level: good }
+  - { skill: Maven/Gradle, category: Programming, level: good }
   - { skill: Python, category: Programming, level: decent }
   - { skill: SQL, category: Programming, level: good }
   - { skill: Design Patterns, category: Software Design, level: good }
